# h5_motor_driver

./: .gitignore  .project  99-stm32.rules  CMakeLists.txt  Makefile  h5_motor_driver.ioc
Core/Inc/: Board_Config.h  cmd_parser.h  eeprom_service.h  hal_imu.h  hal_motor.h  hal_usb.h  hw_bridge.h  kinematics.h  stl_service.h
Core/Src/: cmd_parser.c  eeprom_service.c  hal_imu_mpu6050.c  hal_motor.c  hal_usb.c  kinematics.c  stl_service.c
Inc/: adc.h  main.h  spi.h  stm32h5xx_hal_conf.h  tim.h
Src/: main.c  syscalls.c  system_stm32h5xx.c
Testing/: test_main.c  test_usb.c
cmake/: arm-none-eabi.cmake
config_default/: CMakeCache.txt  Makefile  cmake_install.cmake
